# mafalda

./: .gitignore  README  README.md
TOTCalib/: .cproject  .project  Makefile  runTOTCalib.C
mafalda_framework/: MAFOutput_MPXNtuple_12C_TimePix.root  MediPixAnalysisCoreDict_rdict.pcm  configuration_algos.txt  runExample.C
mafalda_framework/BlobsFinder/: BlobsFinder.cpp  BlobsFinder.h  BlobsFinderPropertiesCalculator.cpp
mafalda_framework/MAFTools/: MAFTools.cpp  MAFTools.h  TimePixCalibrationHandler.cpp
mafalda_framework/MPXAlgo/: MediPixAlgo.cpp  MediPixAlgo.h
mafalda_framework/TOTCalibrationPreparation/: TOTCalibrationPreparation.cpp  TOTCalibrationPreparation.h
mpxdataconverter/: .cproject  .project  MediPixROOTConverter.cpp  listHandler.cpp  listHandler.h
tracking/: CMakeLists.txt  LinearTrackFinder.cc  LinearTrackFinder.hh  TracksAnalyzer.cc  TracksAnalyzer.hh  btf-tracking.cpp  kalman-test2D.cpp  kalman.cc  kalman.hh
